[tool.poetry]
name = "repl_python3_Elliot-Cube"
version = "0.1.0"
description = "Une intélligence artificielle"
authors = ["Saliou Cisse salioucisse52@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
emoji = "^1.2.0"
flask = "^2.0.1"
deep_translator = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
